fix(task-list) Center collapsed icons for side panels (#272)

--- a/main/styles/tasks/task-details.less
+++ b/main/styles/tasks/task-details.less
@@ -14,6 +14,8 @@
 
     .SizeBar-expand {
       width: 100%;
+      padding-left: 0;
+      padding-right: 0;
     }
   }
 
