--- a/main/styles/tasks/task-filters.less
+++ b/main/styles/tasks/task-filters.less
@@ -16,6 +16,8 @@
 
 .FilterToggle-expend {
   width: 100%;
+  padding-left: 0;
+  padding-right: 0;
 }
 
 /** increase selector specificity to override bootstrap **/
